minor changes in text

--- a/emd.ipynb
+++ b/emd.ipynb
@@ -161,7 +161,7 @@
     "## Step #2\n",
     "Interpolate a cubic function over the local maxima. The end result is the corresponding upper and lower signal envelope. Then, calculate the average envelope using the formula:\n",
     "\n",
-    "> $avg envelope$ = $\\frac{upper envelope + lower envelope}{2}$\n",
+    "> $average\\ envelope$ = $\\frac{upper envelope + lower envelope}{2}$\n",
     "\n",
     "The function **interp1d** from package scipy.interpolate is used.\n",
     "\n",
@@ -227,7 +227,9 @@
    "source": [
     "## Step #3\n",
     "\n",
-    "The first IMF is defined as the signal subtracted by the average envelope. The same process continues iteratively, with the signal now being **average_envelope**, until a ceratin stoppage criterion has been met. There are several stopping criteria. To learn more, visit the wiki page: https://en.wikipedia.org/wiki/Hilbert%E2%80%93Huang_transform"
+    "The first IMF is defined as the signal subtracted by the average envelope. The same process continues iteratively, with the signal now being **average_envelope**, until a ceratin stoppage criterion has been met. There are several stopping criteria. To learn more, visit the wiki page: https://en.wikipedia.org/wiki/Hilbert%E2%80%93Huang_transform.\n",
+    "\n",
+    "As we can see in the graph below, the spectrum is reduced to nearly half of the original spectrum, leaving out the high-frequency components, which now construct the signal IMF1."
    ],
    "cell_type": "markdown",
    "metadata": {}
